--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,18 @@ exclude = ["assets/legacy", "assets/*/*.png"]
 
 [[bin]]
 bench = false
-path = "src/main.rs"
+path = "src/trip.rs"
 name = "trip"
 
 [dependencies]
 
 # Library dependencies
 arrayvec = { version = "0.7.4", default-features = false }
-derive_more = { version = "0.99.17", default-features = false, features = [ "mul", "add", "add_assign" ] }
+derive_more = { version = "0.99.17", default-features = false, features = [
+    "mul",
+    "add",
+    "add_assign",
+] }
 socket2 = { version = "0.5.5", default-features = false }
 thiserror = "1.0.51"
 tracing = { version = "0.1.40", default-features = false }
@@ -32,23 +36,38 @@ anyhow = "1.0.76"
 dns-lookup = "2.0.4"
 hickory-resolver = "0.24.0"
 crossbeam = "0.8.2"
-clap = { version = "4.4.0",  default-features = false, features = [ "cargo", "derive", "wrap_help", "usage", "unstable-styles" ] }
+clap = { version = "4.4.0", default-features = false, features = [
+    "cargo",
+    "derive",
+    "wrap_help",
+    "usage",
+    "unstable-styles",
+] }
 clap_complete = "4.4.4"
 humantime = "2.1.0"
 parking_lot = "0.12.1"
 ratatui = "0.25.0"
-crossterm = { version = "0.27.0",  default-features = false, features = [ "events", "windows" ] }
-chrono = { version = "0.4.31", default-features = false, features = [ "clock" ] }
+crossterm = { version = "0.27.0", default-features = false, features = [
+    "events",
+    "windows",
+] }
+chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
 itertools = "0.12.0"
 serde = { version = "1.0.193", default-features = false }
 serde_json = { version = "1.0.108", default-features = false }
 comfy-table = { version = "7.1.0", default-features = false }
-strum = { version = "0.25.0", default-features = false, features = [ "std", "derive" ] }
+strum = { version = "0.25.0", default-features = false, features = [
+    "std",
+    "derive",
+] }
 etcetera = "0.8.0"
-toml = { version = "0.8.8", default-features = false, features = [ "parse" ] }
+toml = { version = "0.8.8", default-features = false, features = ["parse"] }
 indexmap = { version = "2.1.0", default-features = false }
 maxminddb = "0.23.0"
-tracing-subscriber = { version = "0.3.18", default-features = false, features = [ "json", "env-filter" ] }
+tracing-subscriber = { version = "0.3.18", default-features = false, features = [
+    "json",
+    "env-filter",
+] }
 tracing-chrome = "0.7.1"
 petgraph = "0.6.4"
 csv = "1.3.0"
@@ -59,7 +78,11 @@ caps = "0.5.5"
 
 # Library dependencies (Unix)
 [target.'cfg(unix)'.dependencies]
-nix = { version = "0.27.1", default-features = false, features = [ "user", "poll", "net" ] }
+nix = { version = "0.27.1", default-features = false, features = [
+    "user",
+    "poll",
+    "net",
+] }
 
 # Library dependencies (Windows)
 [target.'cfg(windows)'.dependencies]
@@ -85,5 +108,5 @@ test-case = "3.3.1"
 # cargo-generate-rpm dependencies
 [package.metadata.generate-rpm]
 assets = [
-  { source = "target/release/trip", dest = "/usr/bin/trip", mode = "755" },
+    { source = "target/release/trip", dest = "/usr/bin/trip", mode = "755" },
 ]
